[package]
name = "srsa"
version = "0.1.5"
edition = "2021"

description = "A simple backend for creating and using RSA key pairs. Intended for personal use."
readme = "README.md"
license = "MIT"

repository = "https://github.com/AlphabetsAlphabets/srsa"
keywords = ["RSA", "crypto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
rand = "0.8.5"
rsa = { version = "0.8.2", features = ["serde", "pem"] }
pkcs8 = { version = "0.9", features = ["encryption", "pem", "std"]}
